# MasterThesis

./: README.md
Codebase/: Utilities.py  recuirments.txt  requirementsROOT.txt  requirmentsTF.txt
Codebase/DataAnalysis/: FeatureSelection.py  reader.py
Codebase/DataPreparation/: .gitignore  MatrixMethod.h  myscript_simple.C
DataPreparation/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
DataPreparation/Data/: singletopmc.hdf5
DataPreparation/MyNtupAnalysis/: .gitmodules  GetFakeWeight.h  HistFitterTree.cxx  HistFitterTree.h  MatrixMethod.cxx  MySusySkimAnalysis.C  MySusySkimAnalysis.h  OpenDataLooper.C  OpenDataLooper.h  SimpleAnaLoop.C  finalHADD.py  myTree.C  myTree.h  myscript.C  pEirik.py  printHistograms.py  runMyTree.py  (+1 more)
DataPreparation/myNtupAnalysis_c/CalcGenericMT2/: CMakeLists.txt
DataPreparation/myNtupAnalysis_c/CalcGenericMT2/TestC++/: test.C
DataPreparation/myNtupAnalysis_c/CalcGenericMT2/cmt/: version.cmt
DataPreparation/myNtupAnalysis_c/CalcGenericMT2/src/: MT2.h  MT2_ATLAS.h
Notebooks/: helperFunctions.cxx  helperFunctions.h
Presentation/: beamerthemeMathDept.sty  bibliography.bib  main.aux  main.fdb_latexmk  main.fls  main.nav  main.out  main.snm  main.tex  main.toc
thesis/: Acronyms.tex  bibliography.bib  duoforside.tex  duomasterforside.sty  ee.mp  ifimaster.cls  jheppub.sty  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.glsdefs  main.ist  main.lof  main.lot  main.out  main.synctex(busy)  main.tex  main.toc  qqg.mp  test.mp  test1.mp  testtest.mp  tt.mp  ttt.mp  ttttt.mp  uiomasterfp.sty  wilsonone.mp
(+2769 files in other folders)
